--- a/front/html/inicio.html
+++ b/front/html/inicio.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiérete Mucho.</title>
-</head>
-<body>
 
-    
-    
-</body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+    crossorigin="anonymous">
+    </script>
+
+    <link rel="stylesheet" href="../tema/fondo.css">
+
+    <link href="../tema/bootstrap.rtl.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+</head>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50" class="min-vh-100 m-0 d-flex flex-column">
+    <div class="container-fluid mb-5">
+        <nav class="navbar navbar-expand-md navbar-light fondo fixed-top fondo">
+            <div class="container-fluid">
+                <a class="navbar-brand px-0 py-0 mx-0" href="">
+                    <img src="../recursos/logo-sin-fondo.png" alt="Logo de la compañía" width="190px"
+                        class="rounded-2">
+                </a>
+                <button class="navbar-toggler rounded-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#mynavbar">
+                    <i class="bi bi-list-ul"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link me-1" href=""><i
+                                    class="bi bi-house-door"></i>¿Quiénes somos?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link me-1" href=""><i
+                                    class="bi bi-blockquote-left"></i>Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link me-1" href=""><i
+                                    class="bi bi-briefcase"></i>Reclamaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link me-1" href=""><i class="bi bi-file-earmark-bar-graph"></i>
+                                </a>
+                        </li>
+                    </ul>
+                    <button class="rounded-2 border-0 p-2" type="button" data-bs-target="">
+                        <i class="bi bi-cart p-2"></i>
+                    </button>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+
+
+
+
 </html>
