--- a/front/html/test.html
+++ b/front/html/test.html
@@ -49,3 +49,50 @@
     
 </body>
 </html>
+
+<div class="container-fluid d-block mb-5 mt-0 pt-0" id="inicio">
+    <nav class="navbar navbar-expand-md m-0 p-0">
+        <div class="container-fluid">
+            <a class="navbar-brand px-0 py-0 mx-0" href="">
+                <img src="../recursos/logo-sin-fondo.png" alt="Logo de la compañía" width="190px"
+                    class="rounded-2">
+            </a>
+            <button class="navbar-toggler rounded-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#mynavbar">
+                <i class="bi bi-view-list"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link me-1" href="">¿Quiénes somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-1" href="">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-1" href="">Reclamaciones</a>
+                    </li>
+                </ul>
+
+                <div class="container collapase.show-md navbar-md-collapse">
+
+                    <div class="row collapse-md navbar-md-collapse">
+                    <button class="col-12 rounded-2 border-0 p-2" type="button" data-bs-target="collapse"
+                    data-bs-target="#mynavbar">
+                        <i class="bi bi-cart p-2"></i>
+                    </button>
+                    </div>
+
+                    <div class="row collapse-md navbar-md-collapse">
+                    <button class="col-12 rounded-2 fs-6" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#mynavbar">
+                    Identifíquese
+                    </button>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </nav>
+</div>
