--- a/front/html/inicio.html
+++ b/front/html/inicio.html
@@ -35,16 +35,14 @@
 
     <div class="container-fluid d-block mb-5 mt-0 pt-0" id="inicio">
         <nav class="navbar navbar-expand-md m-0 p-0">
-            <div class="container-fluid">
-                <a class="navbar-brand px-0 py-0 mx-0" href="">
-                    <img src="../recursos/logo-sin-fondo.png" alt="Logo de la compañía" width="190px"
+            <div class="container-fluid row">
+                <a class="col-3 navbar-brand px-0 py-0 mx-0" href="">
+                    <img src="../recursos/logo-bueno-recortado.png" alt="Logo de la compañía" width="200px"
                         class="rounded-2">
                 </a>
-                <button class="navbar-toggler rounded-2" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#mynavbar">
-                    <i class="bi bi-view-list"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="mynavbar">
+
+                <div class="collapse navbar-collapse col-10 col-sm-8 mb-3 mx-0" id="mynavbar">
+                    
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link me-1" href="">¿Quiénes somos?</a>
@@ -57,25 +55,19 @@
                         </li>
                     </ul>
 
-                    <div class="container colapase.show-md navbar-md-collapse collapse">
-
-                        <div class="row collapse-md navbar-md-collapse">
-                        <button class="col-12 rounded-2 border-0 p-2" type="button" data-bs-target="collapse"
-                        data-bs-target="#mynavbar">
-                            <i class="bi bi-cart p-2"></i>
-                        </button>
-                        </div>
-
-                        <div class="row collapse-md navbar-md-collapse">
-                        <button class="col-12 rounded-2 fs-6" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#mynavbar">
+                    <button class="shadow-sm col-md-3 rounded-2 fs-7 border-1 p-1 bg-light border-success mx-1" type="button">
                         Identifíquese
-                        </button>
-                        </div>
-
-                    </div>
-
+                    </button>
+                    <button class="shadow-sm col-sm-1 rounded-2 border-1 p-1 bg-light mx-1 border-success" type="button">
+                        <i class="bi bi-cart p-2 text-align-center text-success"></i>
+                    </button>
                 </div>
+            
+                <button class="col-sm-1 col-2 navbar-toggler rounded-2 mt-md-4 border-0 " width="50px" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#mynavbar">
+                    <i class="bi bi-view-list text-align-center"></i>
+                </button>
+
             </div>
         </nav>
     </div>
