--- a/front/html/home.html
+++ b/front/html/home.html
@@ -123,13 +123,61 @@
 
     <!--Fin carousel-->
 
+    <div class="container-fluid">
+        <div class="row d-flex mx-auto">
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/californianas.jpg" alt="Card image cap">
+                <div class="card-body p-3">
+                    <h5 class="card-title fw-bolder">Mechas californianas</h5>
+                    <p class="card-text fw-lighter fst-italic">
+                        Precio orientativo puede variar en días festivos.
+                    </p>
+                    <div class="d-flex flex-column">
+                        <p class="text-end">PVP: 20€</p>
+                        <a href="" class="btn btn-success rounded-2">Pide cita</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/francesa.jpg" alt="Card image cap">
+                <div class="card-body p-3">
+                    <h5 class="card-title fw-bolder">Manicura francesa</h5>
+                    <p class="card-text fw-lighter fst-italic">
+                        Precio orientativo puede variar en días festivos.
+                    </p>
+                    <div class="d-flex flex-column">
+                        <p class="text-end">PVP: 15,50€</p>
+                        <a href="" class="btn btn-success rounded-2">Pide cita</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/tinte1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title fw-bolder">Tinte completo básico</h5>
+                    <p class="card-text fw-lighter fst-italic">
+                        Precio orientativo puede variar en días festivos.
+                    </p>
+                    <div class="d-flex flex-column">
+                        <p class="text-end">PVP: 18,50€</p>
+                        <a href="" class="btn btn-success rounded-2">Pide cita</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+
+    </div>
+
+
 
 
     <!--Footer-->
 
     <footer class="text-center text-md-start text-dark mt-auto w-100 d-table">
 
-        <!-- Section: Social media -->
+        <!-- Sección Social media -->
         <section class="d-flex justify-content-center justify-content-md-around p-2 shadow">
             <!-- Left -->
             <div class="me-5 d-block text-dark">
@@ -152,7 +200,7 @@
             </div>
             <!-- Right -->
         </section>
-        <!-- Section: Social media -->
+        <!-- Sección fin Social media -->
 
         <!-- Section: Links  -->
         <section class="">
@@ -162,42 +210,72 @@
                     <!-- Grid column -->
                     <div class="col-md-4 mx-auto mb-4">
                         <!-- Content -->
-                        <h6 class="text-uppercase fw-bold mb-4 border-bottom border-secondary border-2 text-center">
-                            Company name
+                        <h6 class="text-uppercase fw-bold mb-2 border-bottom border-secondary border-2 text-center">
+                            Dónde encontrarnos
                         </h6>
-                        <p>
-                            Here you can use rows and columns to organize your footer content. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit.
+                        <div class="container">
+
+                        </div>
+                        <!-- Button trigger modal -->
+                        <div class="" data-bs-toggle="modal" data-bs-target="#mapaModal">
+                            <img class="img-fluid min-vw-75" src="../recursos/fotos/localizacion-pajaro.png"
+                                alt="mapa de la localización del negocio.">
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="mapaModal" tabindex="-1" aria-labelledby="mapaModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="mapaModalLabel">C/ Carretero 139 A, Coria del Río,
+                                            Sevilla</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="img-fluid " src="../recursos/fotos/localizacion-satelite.png"
+                                            alt="mapa de la localización del negocio.">
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cerrar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-5  mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-2 border-bottom border-secondary border-2 text-center">
+                            Trabaja con nosotros
+                        </h6>
+                        <h6 class="fw-bold">
+                            ¡Buscamos trabajador@s para nuestro negocio!
+                        </h6>
+                        <p class="fw-lighter">
+                            Buscamos personal capacitado sin experiencia requerida para ser contratado 
+                            en las temporadas de la Feria de Abril, la Romería del Rocío, 
+                            Navidad e inicio de verano para suplir las Comuniones.                             
                         </p>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-md-3  mx-auto mb-4">
+                    <div class="col-md-3 mx-auto mb-2">
                         <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4 border-bottom border-secondary border-2 text-center">
-                            Useful links
+                        <h6 class="text-uppercase fw-bold mb-2 border-bottom border-secondary border-2 text-center">
+                            Contáctanos
                         </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Pricing</a>
+                        <a href="" class="text-decoration-none mb-3" target="_blank">quiertemucho@gmail.com</a>
+                        <p class="mb-0 mt-2">
+                           Teléfono&nbsp;de&nbsp;contacto: 
                         </p>
-                        <p>
-                            <a href="#!" class="text-reset">Settings</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3  mx-auto mb-md-0 mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4 border-bottom border-secondary border-2 text-center">
-                            Contact
-                        </h6>
-                        <p><i class="fas fa-home me-3"></i> Lorem ipsum</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            info@example.com
-                        </p>
+                        <p>627 65 12 14</p>
+                        <p>O visita nuestro negocio para dejar el currículum en mano :&rpar;</p>
                     </div>
                     <!-- Grid column -->
                 </div>
