--- a/front/html/home/home.html
+++ b/front/html/home/home.html
@@ -12,7 +12,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../css/fondo.css">
+    <link rel="stylesheet" href="../../css/fondo.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -36,16 +36,16 @@
 
         </div>
 
-        <nav class="navbar navbar-expand-md navbar-light shadow w-100 rounded-2 mt-0 pt-0 pb-0">
+        <nav class="navbar navbar-expand-md navbar-light shadow w-100 rounded-2 mt-0 pt-0 pb-0 ">
             <div class="container-fluid">
 
-                <a class="navbar-brand" href="">
+                <a class="navbar-brand mx-auto" href="./home.html">
 
-                    <img src="../recursos/logo/logo-bueno-recortado.png" alt="Logo compañía" width="220px">
+                    <img src="../../recursos/logo/logo-bueno-recortado.png" alt="Logo compañía" width="220px">
 
                 </a>
 
-                <button class="navbar-toggler rounded-2 border-0 shadow-none" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler rounded-2 border-0 shadow-none end-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#mynavbar">
                     <i class="bi bi-view-list text-align-center"></i>
                 </button>
@@ -57,7 +57,7 @@
                             <a class="nav-link" href="">¿Quiénes&nbsp;somos?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Servicios</a>
+                            <a class="nav-link" href="../servicios/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Reclamaciones</a>
@@ -102,13 +102,13 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../recursos/fotos/carousel/carousel1.png" alt="" class="d-block w-100">
+                <img src="../../recursos/fotos/carousel/carousel1.png" alt="" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="../recursos/fotos/carousel/carousel2.jpg" alt="" class="d-block w-100">
+                <img src="../../recursos/fotos/carousel/carousel2.jpg" alt="" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="../recursos/fotos/carousel/carousel3.png" alt="" class="d-block w-100">
+                <img src="../../recursos/fotos/carousel/carousel3.png" alt="" class="d-block w-100">
             </div>
         </div>
 
@@ -125,8 +125,8 @@
 
     <div class="container-fluid">
         <div class="row d-flex mx-auto">
-            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
-                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/californianas.jpg" alt="Card image cap">
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../../recursos/fotos/tarjeta/californianas.jpg" alt="Card image cap">
                 <div class="card-body p-3">
                     <h5 class="card-title fw-bolder">Mechas californianas</h5>
                     <p class="card-text fw-lighter fst-italic">
@@ -138,8 +138,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
-                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/francesa.jpg" alt="Card image cap">
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../../recursos/fotos/tarjeta/francesa.jpg" alt="Card image cap">
                 <div class="card-body p-3">
                     <h5 class="card-title fw-bolder">Manicura francesa</h5>
                     <p class="card-text fw-lighter fst-italic">
@@ -151,8 +151,21 @@
                     </div>
                 </div>
             </div>
-            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-4 col-12 col-md-6 shadow" style="width: 18rem;">
-                <img class="card-img-top mt-3 rounded-3" src="../recursos/fotos/tarjeta/tinte1.jpg" alt="Card image cap">
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../../recursos/fotos/tarjeta/tinte1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title fw-bolder">Tinte completo básico</h5>
+                    <p class="card-text fw-lighter fst-italic">
+                        Precio orientativo puede variar en días festivos.
+                    </p>
+                    <div class="d-flex flex-column">
+                        <p class="text-end">PVP: 18,50€</p>
+                        <a href="" class="btn btn-success rounded-2">Pide cita</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow" style="width: 18rem;">
+                <img class="card-img-top mt-3 rounded-3" src="../../recursos/fotos/tarjeta/tinte1.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title fw-bolder">Tinte completo básico</h5>
                     <p class="card-text fw-lighter fst-italic">
@@ -218,7 +231,7 @@
                         </div>
                         <!-- Button trigger modal -->
                         <div class="" data-bs-toggle="modal" data-bs-target="#mapaModal">
-                            <img class="img-fluid min-vw-75" src="../recursos/fotos/localizacion-pajaro.png"
+                            <img class="img-fluid min-vw-75" src="../../recursos/fotos/localizacion-pajaro.png"
                                 alt="mapa de la localización del negocio.">
                         </div>
 
@@ -234,7 +247,7 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="img-fluid " src="../recursos/fotos/localizacion-satelite.png"
+                                        <img class="img-fluid " src="../../recursos/fotos/localizacion-satelite.png"
                                             alt="mapa de la localización del negocio.">
                                     </div>
                                     <div class="modal-footer">
@@ -270,7 +283,7 @@
                         <h6 class="text-uppercase fw-bold mb-2 border-bottom border-secondary border-2 text-center">
                             Contáctanos
                         </h6>
-                        <a href="" class="text-decoration-none mb-3" target="_blank">quiertemucho@gmail.com</a>
+                        <a href="mailto:quieretemucho@gmail.com" class="text-decoration-none mb-3" target="_blank">quiertemucho@gmail.com</a>
                         <p class="mb-0 mt-2">
                            Teléfono&nbsp;de&nbsp;contacto: 
                         </p>
@@ -287,7 +300,7 @@
         <!-- Copyright -->
         <div class="text-center p-md-3 p-2 border-top border-">
             © 2020 Derechos reservados:
-            <a class="text-reset fw-bold" href="">Quiérete Mucho.</a>
+            <a class="text-reset fw-bold" href="../avisolegal/avisolegal.html">Quiérete Mucho.</a>
         </div>
         <!-- Copyright -->
 
