--- a/front/html/home/home.html
+++ b/front/html/home/home.html
@@ -37,7 +37,7 @@
             <div class="container-fluid">
 
                 <div class="container-md">
-                    <div class="row align-items-center justify-content-around-md">
+                    <div class="row align-items-center justify-content-start">
                         <a class="navbar-brand col-5 mt-1 " href="../home/home.html">
 
                             <img src="../../recursos/logo/logo-bueno-recortado.png" alt="Logo compañía" width="200px">
@@ -53,7 +53,7 @@
 
                 <div class="collapse navbar-collapse mx-auto" id="mynavbar">
 
-                    <ul class="navbar-nav mx-auto text-center">
+                    <ul class="navbar-nav me-0 ms-auto text-center">
                         <li class="nav-item">
                             <a class="nav-link" href="../quienessomos/quienesomos.html">¿Quiénes&nbsp;somos?</a>
                         </li>
