--- a/testinghere/front/html/home/home.html
+++ b/testinghere/front/html/home/home.html
@@ -68,7 +68,7 @@
                     <form class="d-flex flex-row justify-content-around align-items-center">
 
                         <button class="rounded-3 border-0 btn mx-1" type="button">
-                            <i class="bi bi-person-circle text-align-center text-dark fs-3"></i>
+                            <a href="../logform/log.html"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
                         </button>
 
                         <button class="rounded-3 border-0 btn mx-1 " type="button">
